<resources>
    <string name="app_name">ChatApp</string>

    <string name="signup_etUsername">Username</string>
    <string name="signup_etNickname">Nickname</string>
    <string name="signup_etPassword">Password</string>
    <string name="signup_eRepeat_password">Repeat password</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="log_inBtn">LOG-IN</string>
    <string name="BaseUrl">http://10.0.2.2:5170/api/</string>
    <string name="newMessageChannel">newMessageChannel</string>
    <string name="newMessageChannelDesc">notifying about a new message that the user received</string>
    <string name="newMessageChannelId">1</string>
    <string name="conversationContactExtraKey">ContactKey</string>
    <string name="broadcastReceiverContactName">contactUsername</string>


</resources>