<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".signup.SignUp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BackgroundOfForm"
        android:gravity="center"
        android:orientation="vertical">

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/signup_etUsername"
        android:autofillHints="username"
        android:inputType="text" />

    <EditText
        android:id="@+id/Nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="name"
        android:hint="@string/signup_etNickname"
        android:inputType="text" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="password"
        android:hint="@string/signup_etPassword"
        android:inputType="textPassword"

        />

    <EditText
        android:id="@+id/RepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="password"
        android:hint="@string/signup_eRepeat_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload profile image"
        android:textColor="@android:color/white"
        tools:ignore="ButtonStyle"
        android:backgroundTint="@color/SignAndLogBtns"
        />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        />

    <Button
        android:id="@+id/submitSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign-Up"
        android:backgroundTint="@color/SignAndLogBtns"
        android:textColor="@android:color/white"
        tools:ignore="ButtonStyle"
        android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/ToLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already registered? log in "
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/SignUpLinkToLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="Here"
                android:textColor="@color/blue"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>